--- a/css/main.css
+++ b/css/main.css
@@ -4,18 +4,62 @@
     padding: 0;
 }
 
-h1 {
-    color: green;
+body > header {
+    background-color: #2f3640;
+    padding: 16px 0;
+    color: #f5f6fa;
 }
 
-h2 {
-    color: green;
+header .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-#economy h2 {
-    color: gold;
+header li {
+    display: inline;
 }
 
-.creation-date {
-    color: #ccc;
+header li a {
+    color: #f5f6fa;
+}
+
+.container {
+    width: 1366px;
+    margin: 0 auto;
+}
+
+.articles {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.articles  article img {
+    height: 180px;
+}
+
+.articles article {
+    width: 30%;
+}
+
+section {
+    padding: 16px 0;
+}
+
+section h2,
+.articles article {
+    margin-bottom: 16px;
+}
+
+.articles article h3 {
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+.articles article a {
+    background-color: blue;
+    color: #fff;
+    padding: 8px;
+    display: inline-block;
 }
